--- a/main.html
+++ b/main.html
@@ -4,10 +4,23 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Dog Adoption</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ul>
+		<li>
+			<a href=https://en.wikipedia.org/wiki/Golden_Retriever"">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg"
+				alt="image1" height="200px" width="400px">
+			</a>
+		</li>
+		<li>
+			<a href="https://en.wikipedia.org/wiki/Poodle">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="image2" height="200px" width="400px">
+			</a>
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
