--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<ul>
 		<li>
-			<a href=https://en.wikipedia.org/wiki/Golden_Retriever"">
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
 			<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg"
 				alt="image1" height="200px" width="400px">
 			</a>
